--- a/main.ipynb
+++ b/main.ipynb
@@ -1,13 +1,107 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "Automação WEB com Selenium\n",
+    "Mini Curso: https://www.youtube.com/watch?v=8AMNaVt0z_M"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Para aprender, vamos usar o Python para preencher um formulário na internet\n",
+    "\n",
+    "# Passo 1: Entrar em https://pages.hashtagtreinamentos.com/inscricao-minicurso-python-automacao-org?origemurl=hashtag_yt_org_minipython_videoselenium\n",
+    "# Passo 2: Preencher nome, preencher e-mail\n",
+    "# Passo 3: Clicar no botão para enviar o formulário"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "\n",
+    "#Garante que o driver manager seja igual o da atual versão do navegador\n",
+    "servico = Service(ChromeDriverManager().install())\n",
+    "navegador = webdriver.Chrome(service=servico)\n",
+    "\n",
+    "#firefox -> geckodriver\n",
+    "#chrome -> chromedriver"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "# Passo 1: Entrar em https://pages.hashtagtreinamentos\n",
+    "#.com/inscricao-minicurso-python-automacao-org?origemurl=hashtag_yt_org_minipython_videoselenium\n",
+    "\n",
+    "navegador.get(\"https://pages.hashtagtreinamentos.com/inscricao-minicurso-python-automacao-org?origemurl=hashtag_yt_org_minipython_videoselenium\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "#xpath consiste em um identificador de todo elemento web\n",
+    "#XPath uses path expressions to select nodes or node-sets in an XML document. The node is selected by following a path or steps.\n",
+    "navegador.find_element('xpath', '//*[@id=\"section-10356508\"]/section/div[2]/div/div[2]/form/div[1]/div/div[1]/div/input').send_keys(\"ale\")\n",
+    "\n",
+    "navegador.find_element('xpath', '//*[@id=\"section-10356508\"]/section/div[2]/div/div[2]/form/div[1]/div/div[2]/div/input').send_keys(\"ale@gmail.com\")\n",
+    "\n",
+    "navegador.find_element('xpath', '//*[@id=\"section-10356508\"]/section/div[2]/div/div[2]/form/div[1]/div/div[3]/div/input').click()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
