Entrar no Enxuto-Limeira e pegar o PDF da promoção do dia

--- a/main.ipynb
+++ b/main.ipynb
@@ -44,8 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Downloading: 100%|██████████| 7.26M/7.26M [00:00<00:00, 59.9MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Passo 1: Entrar em https://pages.hashtagtreinamentos\n",
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#xpath consiste em um identificador de todo elemento web\n",
@@ -89,6 +97,39 @@
     "navegador.find_element('xpath', '//*[@id=\"section-10356508\"]/section/div[2]/div/div[2]/form/div[1]/div/div[2]/div/input').send_keys(\"ale@gmail.com\")\n",
     "\n",
     "navegador.find_element('xpath', '//*[@id=\"section-10356508\"]/section/div[2]/div/div[2]/form/div[1]/div/div[3]/div/input').click()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "navegador.get(\"https://site.enxuto.com.br/index.php/tabloideenxuto\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "navegador.find_element('xpath', '/html/body/div/div/section/div/article/div/div[2]/ul/li[3]/p/a[1]').click()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "navegador.find_element('xpath', '/html/body/app-root/app-institucional/div/div/div/div[3]/div[1]/ul/li/a[3]/strong').click()"
    ],
    "metadata": {
     "collapsed": false
